--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
     "version": "1.0.0",
     "description": "Telegram Web App for Flappy Quakks",
     "main": "bot.js",
+    "engines": {
+      "node": "16.x"
+    },
     "scripts": {
-        "dev": "node bot.js",
-        "start": "node bot.js"
+      "start": "node bot.js"
     },
     "dependencies": {
-        "@ngrok/ngrok": "^1.5.0",
-        "dotenv": "^10.0.0",
-        "express": "^4.18.2",
-        "node-telegram-bot-api": "^0.66.0"
+      "@ngrok/ngrok": "^1.5.0",
+      "dotenv": "^10.0.0",
+      "express": "^4.18.2",
+      "node-telegram-bot-api": "^0.66.0",
+      "request": "^2.88.2"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "type": "commonjs"
-}
+  }
+  
