--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 ENV=production
 
 # DEV: during dev you can point at localhost (or better, an ngrok HTTPS URL)
-GAME_URL=https://discovered-mangrove-animal.glitch.me/flappy_quakks/
+GAME_URL=https://whispering-jet-novel.glitch.me/flappy_quakks/
 DEV_SERVER_URL=http://localhost:3000
 
 # PROD: fill in when you deploy publicly with HTTPS
