--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
       "dotenv": "^10.0.0",
       "express": "^4.18.2",
       "node-telegram-bot-api": "^0.66.0",
-      "request": "^2.88.2",
-      "sqlite3": "^5.1.2"
+      "request": "^2.88.2"
     },
     "keywords": [],
     "author": "",
